# template-monoid

./: .gitignore  LICENSE  README.md  template-monoid.cabal
src/Data/Monoid/: Template.hs
