cabal-version:      3.0
name:               template-monoid
version:            0.1.0.0
synopsis:           A datatype for combining monoidal values with effects
-- description:
license:            MIT
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Monoid.Template
    build-depends:    base >=4.15 && <5
    hs-source-dirs:   src
    default-language: Haskell2010
